# ai-framework-core

./: .gitignore  README.md  mypy.ini  pyproject.toml  requirements-dev.txt  requirements.txt  setup.py
examples/: demo_agent.py
src/ai_framework/: __init__.py
src/ai_framework/agents/: base.py
src/ai_framework/chains/: base.py  simple.py
src/ai_framework/llms/: base.py  fake.py
src/ai_framework/tools/: base.py  calculator.py  search.py
tests/: test_chains.py  test_integration.py  test_llm_base.py
