[project]
name = "ai-framework-core"
version = "0.1.0"  # ← ОБЯЗАТЕЛЬНОЕ ПОЛЕ
description = "AI Framework Core"
authors = [
    {name = "bvs", email = "bugaev@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"